Add pre-defined graph visualizations
