# db_service/openapi.yaml
@@ -5459,6 +5459,7 @@ paths:
       parameters:
       - name: key
         in: path
+        description: Workflow key
         required: true
         style: simple
         explode: false
@@ -5533,6 +5534,7 @@ paths:
       parameters:
       - name: key
         in: path
+        description: Workflow key
         required: true
         style: simple
         explode: false
@@ -5598,6 +5600,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/inline_response_500'
       security: []
+  /workflows/{key}/dot_graph/{name}:
+    get:
+      tags: []
+      summary: Build a string for a DOT graph.
+      description: Build a string for a DOT graph.
+      operationId: get_workflows_key_dot_graph_name
+      parameters:
+      - name: key
+        in: path
+        description: Workflow key
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: path
+        description: Graph name
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: HTTP 200 OK.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_31'
+        "500":
+          description: Default error response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_500'
+      security: []
 components:
   schemas:
     compute_node_stats_key_model:
@@ -5656,6 +5695,13 @@ components:
         _id:
           type: string
         _rev:
+          type: string
+    inline_response_200_31:
+      required:
+      - graph
+      type: object
+      properties:
+        graph:
           type: string
     workflow_specifications_schedulers:
       type: object
